--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,6 +33,10 @@
               <a class="nav-link" href="/about">About</a>
             </li>
 
+            <li class="nav-item">
+              <a class="nav-link" href="/feedback">Course Feedback</a>
+            </li>
+
             
             <% if (!loggedIn) {%>
             <li class="nav-item">
