--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -33,10 +33,7 @@
               <a class="nav-link" href="/about">About</a>
             </li>
 
-            <li class="nav-item">
-              <a class="nav-link" href="/feedback">Course Feedback</a>
-            </li>
-
+           
             
             <% if (!loggedIn) {%>
             <li class="nav-item">
@@ -45,7 +42,7 @@
             <% } else { %>
 
               <li class="nav-item">
-                <a class="nav-link" href="/todo">To Do list</a>
+                <a class="nav-link" href="/courseFeedback">CourseFeedback</a>
               </li>
             
               
